@@ -1,3 +1,7 @@
+2011-08-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* tooltips with complete proof command
+
 2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* external node window height configurable
